ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/Asset_Verification__c.object-meta.xml
<CustomObject>
    <description>Asset Verification object will store all the Asset Details verification status where Delivered = Yes</description>
    <label>Asset Verification</label>
    <nameField>
        <label>Asset Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>