ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Asset Verifications</relationshipLabel>
    <relationshipName>Asset_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>