ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Asset_MMV__c.field-meta.xml
<CustomField>
    <fullName>Asset_MMV__c</fullName>
    <description>Asset MMV(Make Model Variant) will be Prepopulate from Vehicle Details</description>
    <label>Asset MMV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>