ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Asset Verifications</relationshipLabel>
    <relationshipName>Asset_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>