ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Chasis_No__c.field-meta.xml
<CustomField>
    <fullName>Chasis_No__c</fullName>
    <description>Chasis No will be Prepopulate from Vehicle Details</description>
    <label>Chasis No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>