ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Date_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Delivery__c</fullName>
    <label>Date of Delivery</label>
    <type>DateTime</type>
</CustomField>