ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Date_of_submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_submission__c</fullName>
    <description>Auto-Populate after final submission</description>
    <label>Date of submission</label>
    <type>DateTime</type>
</CustomField>