ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Engine_and_Chassis_Number_Matches__c.field-meta.xml
<CustomField>
    <fullName>Engine_and_Chassis_Number_Matches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chassis and Engine Number Matches</label>
    <type>Checkbox</type>
</CustomField>