ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <description>Engine No will be Prepopulate from Vehicle Details</description>
    <label>Engine No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>