ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/HMR__c.field-meta.xml
<CustomField>
    <fullName>HMR__c</fullName>
    <label>HMR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>