ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Hypothetation_available__c.field-meta.xml
<CustomField>
    <fullName>Hypothetation_available__c</fullName>
    <label>Hypothecation available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>