ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Insurance_Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Validity_Date__c</fullName>
    <label>Insurance Validity Date</label>
    <type>DateTime</type>
</CustomField>