ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Is_Post_Sanction_Verified_Asset__c.field-meta.xml
<CustomField>
    <fullName>Is_Post_Sanction_Verified_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Post Sanction Verified Asset</label>
    <type>Checkbox</type>
</CustomField>