ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/PDAV_Remarks__c.field-meta.xml
<CustomField>
    <fullName>PDAV_Remarks__c</fullName>
    <label>PDAV Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>