ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/PDAV_Status__c.field-meta.xml
<CustomField>
    <fullName>PDAV_Status__c</fullName>
    <label>PDAV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>