ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/RC_in_the_name_of__c.field-meta.xml
<CustomField>
    <fullName>RC_in_the_name_of__c</fullName>
    <label>RC in the name of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>