ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/RC_No__c.field-meta.xml
<CustomField>
    <fullName>RC_No__c</fullName>
    <label>RC No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>