ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <description>Serial No will be Prepopulate from Vehicle Details</description>
    <label>Serial No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>