ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Type_of_AV__c.field-meta.xml
<CustomField>
    <fullName>Type_of_AV__c</fullName>
    <description>Type of Asset Verification</description>
    <label>Type of AV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>