ProdIND/ProdPrograms/force-app/main/default/objects/Asset_Verification__c/fields/Vehicle_Detail__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Detail</label>
    <referenceTo>Vehicle_Detail__c</referenceTo>
    <relationshipLabel>Related Asset Verifications</relationshipLabel>
    <relationshipName>RelatedAsset_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>